--- a/Application/OLD/Views/index.ejs
+++ b/Application/OLD/Views/index.ejs
@@ -117,7 +117,6 @@
                             <tr>
                                 <th scope="col">Air Réf</th>
                                 <th scope="col">Departure</th>
-                                <th scope="col">Order</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -147,7 +146,7 @@
         <div class="container">
                 <div class="col-md-12">
                     <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss"></i></a></li>
