--- a/Application/Views/welcome.ejs
+++ b/Application/Views/welcome.ejs
@@ -110,13 +110,32 @@
             </div>
         </div>
     </div>
-    <!-- where_togo_area_end  -->
-    <h1>THANK YOU YOUR TECKETT HAVE BEEN SELECTED WITH SECCUSFULY</h1>
-    <p>please check ur email if u diden't get any email [don't forget to check spam] call us in </p>
-    <p>+212621114160</p>
-    <p>Have a nice day</p>
-    <!-- popular_destination_area_end  -->
-   
+
+<div class="blink" style="margin: 3%;"></div>
+
+        <!-- slider_area_start -->
+        <div class="slider_area">
+            <div class="slider_active owl-carousel">
+                <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-xl-12 col-md-12">
+                                <div class="slider_text text-center">
+                                    <p>THANK YOU YOUR TECKETT HAVE BEEN SELECTED WITH SECCUSFULY</p>
+                                    <p>please check ur email if u diden't get any email [don't forget to check spam] call us in</p>
+                                    <p>+212621114160</p>
+                                    <p>Have a nice day</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="blink" style="margin: 3%;"></div>
+
+
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
