--- a/Application/Views/index.ejs
+++ b/Application/Views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Travelo</title>
+    <title>SafiAir</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -31,9 +31,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="home.html">home</a></li>
-                                            <li><a class="" href="reservation.html">Reservation</a></l/li>
-                                            <li><a href="confirmation.html">Cofirmation</a></li>
+                                            <li><a class="active" href="#">home</a></li>
+                                            <li><a class="" href="#">Flight</a></l/li>
+                                            <li><a href="#">Blog</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -41,15 +41,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> +21260000000000</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
+                                        <p>+21260000000000</p>
                                     </div>
                                 </div>
                             </div>
@@ -70,8 +62,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Indonesia</h3>
-                                <p>Pixel perfect design with awesome contents</p>
+                                <h3>Safi Air</h3>
+                                <p> Find flight deals </p>
                                 <a href="#" class="boxed-btn3">Explore Now</a>
                             </div>
                         </div>
@@ -85,9 +77,9 @@
     <!-- where_togo_area_start  -->
     <div class="where_togo_area">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center" style="margin-left: -100px;">
                 <div class="col-lg-3">
-                    <div class="form_area">
+                    <div  class="form_area">
                         <h3>Where you want to go?</h3>
                     </div>
                 </div>
@@ -104,11 +96,11 @@
                                 <input type="text" name="date_départ" placeholder="YYYY-MM-DD" min="2021-2-27" max="2021-12-31">
                             </div>
                             <div class="input_field">
-                                <input id="appt-datepicker" type="time" name="heure_départ-time" step="2">
+                                <input id="appt-datepicker" type="time" name="heure_départ" step="2">
                             </div>
 
                             <div class="search_btn">
-                                <button class="boxed-btn4 " type="submit" >Search</button>
+                                <button class="boxed-btn4 "  type="submit" >Search</button>
                             </div>
                         </form>
                     </div>
@@ -128,7 +120,7 @@
                         
                     </div>
                 </div>
-                <table class="table table-bordered border-warning">
+                <table class="table table-bordered ">
                     <thead class="thead-light">
                         <th>Air Réf</th>
                         <th>Departure</th>
@@ -180,9 +172,6 @@
                             <% }); %>
                     </tbody>
                 </table>
-            </div>
-            <div class="row" style="height: 400px;">
-            </div>
         </div>
     </div>
     <!-- popular_destination_area_end  -->
@@ -198,9 +187,9 @@
                                     <img class="logo" src="img/footer_logo.png" alt="">
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
-                                <a href="#">contact@carpenter.com</a>
+                            <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
+                                <a href="#">+2125280000</a> <br>
+                                <a href="#">contact@SafiAir.com</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -237,7 +226,7 @@
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                Company
+                                SafiAir
                             </h3>
                             <ul class="links">
                                 <li><a href="#">Pricing</a></li>
@@ -253,14 +242,14 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Indonesia</a></li>
-                                <li><a href="#">America</a></li>
-                                <li><a href="#">India</a></li>
-                                <li><a href="#">Switzerland</a></li>
-                                <li><a href="#">Italy</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Franch</a></li>
-                                <li><a href="#">England</a></li>
+                                <li><a href="#">Tanger</a></li>
+                                <li><a href="#">Casablanca</a></li>
+                                <li><a href="#">Rabat</a></li>
+                                <li><a href="#">Agadir</a></li>
+                                <li><a href="#">Guelmim</a></li>
+                                <li><a href="#">Laayoun</a></li>
+                                <li><a href="#">Dakhla</a></li>
+                                <li><a href="#">Europ</a></li>
                             </ul>
                         </div>
                     </div>
