--- a/Application/Views/payment.ejs
+++ b/Application/Views/payment.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Travelo</title>
+    <title>SafiAir</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,8 +41,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html">
-                                        <img class="logo" src="/img/logo.png" alt="">
+                                    <a href="home.html">
+                                        <img class="logo" src="../img/logo.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -50,9 +50,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="home.html">home</a></li>
-                                            <li><a class="" href="reservation.html">Reservation</a></l/li> <li><a
-                                                    href="confirmation.html">Cofirmation</a></li>
+                                            <li><a class="active" href="#">home</a></li>
+                                            <li><a class="" href="#">Flight</a></l/li>
+                                            <li><a href="#">Blog</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -60,15 +60,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> +21260000000000</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
+                                        <p>+21260000000000</p>
                                     </div>
                                 </div>
                             </div>
@@ -87,7 +79,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Destinations</h3>
+                        <h3>Payement</h3>
                         <p>Pixel perfect design with awesome contents</p>
                     </div>
                 </div>
@@ -101,7 +93,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-9">
                     <div class="destination_info">
-                        <div class="bordered_1px"></div>
                         <div class="contact_join">
                             <h3>Payment</h3>
                            
