--- a/Application/Views/confirmation.ejs
+++ b/Application/Views/confirmation.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>MZY</title>
+    <title>SafiAir</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png">
@@ -14,6 +14,7 @@
     
 </head>
 <body>
+    <!-- header-start -->
     <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area">
@@ -22,8 +23,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html">
-                                        <img class="logo" src="/img/logo.png" alt="">
+                                    <a href="home.html">
+                                        <img class="logo" src="../img/logo.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -31,9 +32,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="home.html">home</a></li>
-                                            <li><a class="" href="reservation.html">Reservation</a></l/li>
-                                            <li><a href="confirmation.html">Cofirmation</a></li>
+                                            <li><a class="active" href="#">home</a></li>
+                                            <li><a class="" href="#">Flight</a></l/li>
+                                            <li><a href="#">Blog</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -41,15 +42,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> +21260000000000</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
+                                        <p>+21260000000000</p>
                                     </div>
                                 </div>
                             </div>
@@ -60,18 +53,22 @@
             </div>
         </div>
     </header>
+    <!-- header-end -->
     <div class="destination_banner_wrap overlay">
         <div class="destination_text text-center">
-            <h3>Saintmartine Iceland</h3>
+            <h3>Confirmation</h3>
             <p>Pixel perfect design with awesome contents</p>
         </div>
     </div>
     <div class="card text-center">
         <form action="/confirmation/<%= id_airplane %>" method="POST">
-      <div class="card-header">
+      <div class="card-header" style="background-color: #040e27;color: #c28f34;">
             Reservation Détails
         </div>
+        
         <div class="card-body">
+            <div class="confir">
+                <div>
             <% rows.forEach(function(row){ %>     
             <h5 class="card-title">Nom : <%= nom %> </h5>
             <input type="hidden" name="id_airplane" value="<%= id_airplane %>">
@@ -89,6 +86,11 @@
             <input type="hidden" name="place_reservé" value="<%= place_reservé %>">
             <h5 class="card-title">Nombre de Place : <%= place_reservé %></h5>
             <h5 class="card-title">Prix   : <%= row.price * place_reservé %></h5>
+        </div>
+            <div>
+                <img class="ticket" src="../img/banner/ticket.png" alt="">
+            </div>
+        </div>
             <button id="confirmé" type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">Confirmé</button>
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -113,7 +115,7 @@ fs.writeFile('contents.txt', contents, err => {
                             </script>
                         </button>
                     </div> <% }); %>
-                    <div class="modal-body">
+                    <div class="modal-body" style="color: #040e27;">
                         Réserver votre billet
                     </div>
                     <div class="modal-footer">
@@ -129,126 +131,126 @@ fs.writeFile('contents.txt', contents, err => {
 
         </form>
 
-    <footer class="footer">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-md-6 col-lg-4 ">
-                        <div class="footer_widget">
-                            <div class="footer_logo">
-                                <a href="#">
-                                    <img class="logo" src="/img/footer_logo.png" alt="">
-                                </a>
+        <footer class="footer">
+            <div class="footer_top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-md-6 col-lg-4 ">
+                            <div class="footer_widget">
+                                <div class="footer_logo">
+                                    <a href="#">
+                                        <img class="logo" src="img/footer_logo.png" alt="">
+                                    </a>
+                                </div>
+                                <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
+                                    <a href="#">+2125280000</a> <br>
+                                    <a href="#">contact@SafiAir.com</a>
+                                </p>
+                                <div class="socail_links">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <i class="ti-facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="ti-twitter-alt"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-instagram"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-pinterest"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-youtube-play"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+    
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
-                                <a href="#">contact@carpenter.com</a>
-                            </p>
-                            <div class="socail_links">
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti-twitter-alt"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-pinterest"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-youtube-play"></i>
-                                        </a>
-                                    </li>
+                        </div>
+                        <div class="col-xl-2 col-md-6 col-lg-2">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                    SafiAir
+                                </h3>
+                                <ul class="links">
+                                    <li><a href="#">Pricing</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#"> Gallery</a></li>
+                                    <li><a href="#"> Contact</a></li>
                                 </ul>
                             </div>
-
                         </div>
-                    </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Company
-                            </h3>
-                            <ul class="links">
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
-                            </ul>
+                        <div class="col-xl-3 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                    Popular destination
+                                </h3>
+                                <ul class="links double_links">
+                                    <li><a href="#">Tanger</a></li>
+                                    <li><a href="#">Casablanca</a></li>
+                                    <li><a href="#">Rabat</a></li>
+                                    <li><a href="#">Agadir</a></li>
+                                    <li><a href="#">Guelmim</a></li>
+                                    <li><a href="#">Laayoun</a></li>
+                                    <li><a href="#">Dakhla</a></li>
+                                    <li><a href="#">Europ</a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Popular destination
-                            </h3>
-                            <ul class="links double_links">
-                                <li><a href="#">Indonesia</a></li>
-                                <li><a href="#">America</a></li>
-                                <li><a href="#">India</a></li>
-                                <li><a href="#">Switzerland</a></li>
-                                <li><a href="#">Italy</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Franch</a></li>
-                                <li><a href="#">England</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Instagram
-                            </h3>
-                            <div class="instagram_feed">
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/1.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/2.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/3.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/4.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/5.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img src="/img/instagram/6.png" alt="">
-                                    </a>
+                        <div class="col-xl-3 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                    Instagram
+                                </h3>
+                                <div class="instagram_feed">
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/1.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/2.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/3.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/4.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/5.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="single_insta">
+                                        <a href="#">
+                                            <img src="img/instagram/6.png" alt="">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
