--- a/Application/Views/reservation.ejs
+++ b/Application/Views/reservation.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Travelo</title>
+    <title>SafiAir</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,7 +40,7 @@
                         <div class="row align-items-center">
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html">
+                                    <a href="#">
                                         <img class="logo" src="/img/logo.png" alt="">
                                     </a>
                                 </div>
@@ -49,9 +49,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="home.html">home</a></li>
-                                            <li><a class="" href="reservation.html">Reservation</a></l/li>
-                                            <li><a href="confirmation.html">Cofirmation</a></li>
+                                            <li><a class="active" href="#">home</a></li>
+                                            <li><a class="" href="#">Reservation</a></l/li>
+                                            <li><a href="#">Cofirmation</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -59,16 +59,9 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> +21260000000000</p>
+                                        <p>  +21260000000000</p>
                                     </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -100,7 +93,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-9">
                     <div class="destination_info">
-                    <div class="bordered_1px"></div>
                     <div class="contact_join">
                         <h3>Réservation</h3>
                         <form action="/reservation/<%= id_airplane %>" method="POST">
@@ -164,12 +156,12 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img class="logo" src="/img/footer_logo.png" alt="">
+                                    <img class="logo" src="img/footer_logo.png" alt="">
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
-                                <a href="#">contact@carpenter.com</a>
+                            <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
+                                <a href="#">+2125280000</a> <br>
+                                <a href="#">contact@SafiAir.com</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -206,7 +198,7 @@
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                Company
+                                SafiAir
                             </h3>
                             <ul class="links">
                                 <li><a href="#">Pricing</a></li>
@@ -222,14 +214,14 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Indonesia</a></li>
-                                <li><a href="#">America</a></li>
-                                <li><a href="#">India</a></li>
-                                <li><a href="#">Switzerland</a></li>
-                                <li><a href="#">Italy</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Franch</a></li>
-                                <li><a href="#">England</a></li>
+                                <li><a href="#">Tanger</a></li>
+                                <li><a href="#">Casablanca</a></li>
+                                <li><a href="#">Rabat</a></li>
+                                <li><a href="#">Agadir</a></li>
+                                <li><a href="#">Guelmim</a></li>
+                                <li><a href="#">Laayoun</a></li>
+                                <li><a href="#">Dakhla</a></li>
+                                <li><a href="#">Europ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -241,32 +233,32 @@
                             <div class="instagram_feed">
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/1.png" alt="">
+                                        <img src="img/instagram/1.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/2.png" alt="">
+                                        <img src="img/instagram/2.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/3.png" alt="">
+                                        <img src="img/instagram/3.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/4.png" alt="">
+                                        <img src="img/instagram/4.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/5.png" alt="">
+                                        <img src="img/instagram/5.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="/img/instagram/6.png" alt="">
+                                        <img src="img/instagram/6.png" alt="">
                                     </a>
                                 </div>
                             </div>
