--- a/Application/Views/welcome.ejs
+++ b/Application/Views/welcome.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Travelo</title>
+    <title>SafiAir</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -31,9 +31,9 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a class="active" href="home.html">home</a></li>
-                                            <li><a class="" href="reservation.html">Reservation</a></l/li>
-                                            <li><a href="confirmation.html">Cofirmation</a></li>
+                                            <li><a class="active" href="#">home</a></li>
+                                            <li><a class="" href="#">Flight</a></l/li>
+                                            <li><a href="#">Blog</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -41,15 +41,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> +21260000000000</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
+                                        <p>+21260000000000</p>
                                     </div>
                                 </div>
                             </div>
@@ -70,9 +62,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Indonesia</h3>
-                                <p>Pixel perfect design with awesome contents</p>
-                                <a href="#" class="boxed-btn3">Explore Now</a>
+                                <h3>Enjoy</h3>
                             </div>
                         </div>
                     </div>
@@ -82,49 +72,22 @@
     </div>
     <!-- slider_area_end -->
 
-    <!-- where_togo_area_start  -->
-    <div class="where_togo_area">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-3">
-                    <div class="form_area">
-                        <h3>Where you want to go?</h3>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="search_wrap">
-                        <form action="/view" method="POST">
-                            <div class="input_field" style="margin-right: 70px;">
-                                <input type="text" placeholder="Where to go?" name="Départ">
-                            </div>
-                            <div class="input_field">
-                                <input id="datepicker" placeholder="TO" name="Arrivé">
-                            </div>
-
-                            <div class="search_btn">
-                                <button class="boxed-btn4 " type="submit" >Search</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 <div class="blink" style="margin: 3%;"></div>
 
         <!-- slider_area_start -->
         <div class="slider_area">
             <div class="slider_active owl-carousel">
-                <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
+                <div class="single_slider  d-flex align-items-center slider_bg_ " style="background: white;">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-xl-12 col-md-12">
                                 <div class="slider_text text-center">
-                                    <p>THANK YOU YOUR TECKETT HAVE BEEN SELECTED WITH SECCUSFULY</p>
-                                    <p>please check ur email if u diden't get any email [don't forget to check spam] call us in</p>
-                                    <p>+212621114160</p>
-                                    <p>Have a nice day</p>
+                                    <p style="color: #040e27;">THANK YOU YOUR TECKETT HAVE BEEN SELECTED WITH SECCUSFULY</p>
+                                    <p style="color: #040e27;">please check ur email if u diden't get any email [don't forget to check spam] call us in</p>
+                                    <p style="color: #040e27;">+212621114160</p>
+                                    <p style="color: #040e27;">Have a nice day</p>
+                                    <a href="#" class="boxed-btn3"> Back to home page</a>
                                 </div>
                             </div>
                         </div>
@@ -147,9 +110,9 @@
                                     <img class="logo" src="img/footer_logo.png" alt="">
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
-                                <a href="#">contact@carpenter.com</a>
+                            <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
+                                <a href="#">+2125280000</a> <br>
+                                <a href="#">contact@SafiAir.com</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -186,7 +149,7 @@
                     <div class="col-xl-2 col-md-6 col-lg-2">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                Company
+                                SafiAir
                             </h3>
                             <ul class="links">
                                 <li><a href="#">Pricing</a></li>
@@ -202,14 +165,14 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Indonesia</a></li>
-                                <li><a href="#">America</a></li>
-                                <li><a href="#">India</a></li>
-                                <li><a href="#">Switzerland</a></li>
-                                <li><a href="#">Italy</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Franch</a></li>
-                                <li><a href="#">England</a></li>
+                                <li><a href="#">Tanger</a></li>
+                                <li><a href="#">Casablanca</a></li>
+                                <li><a href="#">Rabat</a></li>
+                                <li><a href="#">Agadir</a></li>
+                                <li><a href="#">Guelmim</a></li>
+                                <li><a href="#">Laayoun</a></li>
+                                <li><a href="#">Dakhla</a></li>
+                                <li><a href="#">Europ</a></li>
                             </ul>
                         </div>
                     </div>
