--- a/Application/Views/payment.ejs
+++ b/Application/Views/payment.ejs
@@ -192,7 +192,7 @@
                             <div class="footer_widget">
                                 <div class="footer_logo">
                                     <a href="#">
-                                        <img class="logo" src="/img/footer_logo.png" alt="">
+                                        <img class="logo" src="/img/logo.png" alt="">
                                     </a>
                                 </div>
                                 <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
