--- a/Application/Views/welcome.ejs
+++ b/Application/Views/welcome.ejs
@@ -87,7 +87,7 @@
                                     <p style="color: #040e27;">please check ur email if u diden't get any email [don't forget to check spam] call us in</p>
                                     <p style="color: #040e27;">+212621114160</p>
                                     <p style="color: #040e27;">Have a nice day</p>
-                                    <a href="#" class="boxed-btn3"> Back to home page</a>
+                                    <a href="http://localhost:3000/" class="boxed-btn3"> Back to home page</a>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img class="logo" src="img/footer_logo.png" alt="">
+                                    <img class="logo" src="/img/logo.png" alt="">
                                 </a>
                             </div>
                             <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
