--- a/Application/Views/reservation.ejs
+++ b/Application/Views/reservation.ejs
@@ -156,7 +156,7 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img class="logo" src="img/footer_logo.png" alt="">
+                                    <img class="logo" src="img/logo.png" alt="">
                                 </a>
                             </div>
                             <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
