--- a/Application/Views/confirmation.ejs
+++ b/Application/Views/confirmation.ejs
@@ -88,7 +88,7 @@
             <h5 class="card-title">Prix   : <%= row.price * place_reservé %></h5>
         </div>
             <div>
-                <img class="ticket" src="../img/banner/ticket.png" alt="">
+                <img class="ticket" src="/img/banner/ticket.png" alt="">
             </div>
         </div>
             <button id="confirmé" type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">Confirmé</button>
@@ -139,7 +139,7 @@ fs.writeFile('contents.txt', contents, err => {
                             <div class="footer_widget">
                                 <div class="footer_logo">
                                     <a href="#">
-                                        <img class="logo" src="img/footer_logo.png" alt="">
+                                        <img class="logo" src="/img/footer_logo.png" alt="">
                                     </a>
                                 </div>
                                 <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
@@ -216,32 +216,32 @@ fs.writeFile('contents.txt', contents, err => {
                                 <div class="instagram_feed">
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/1.png" alt="">
+                                            <img src="/img/instagram/1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/2.png" alt="">
+                                            <img src="/img/instagram/2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/3.png" alt="">
+                                            <img src="/img/instagram/3.png" alt="">
                                         </a>
                                     </div>
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/4.png" alt="">
+                                            <img src="/img/instagram/4.png" alt="">
                                         </a>
                                     </div>
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/5.png" alt="">
+                                            <img src="/img/instagram/5.png" alt="">
                                         </a>
                                     </div>
                                     <div class="single_insta">
                                         <a href="#">
-                                            <img src="img/instagram/6.png" alt="">
+                                            <img src="/img/instagram/6.png" alt="">
                                         </a>
                                     </div>
                                 </div>
