--- a/Application/Views/reservation.ejs
+++ b/Application/Views/reservation.ejs
@@ -156,7 +156,7 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img class="logo" src="img/logo.png" alt="">
+                                    <img class="logo" src="/img/logo.png" alt="">
                                 </a>
                             </div>
                             <p>Société SafiAir <br> 514 Avenue Zerktouni, Safi <br>
@@ -233,32 +233,32 @@
                             <div class="instagram_feed">
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/1.png" alt="">
+                                        <img src="/img/instagram/1.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/2.png" alt="">
+                                        <img src="/img/instagram/2.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/3.png" alt="">
+                                        <img src="/img/instagram/3.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/4.png" alt="">
+                                        <img src="/img/instagram/4.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/5.png" alt="">
+                                        <img src="/img/instagram/5.png" alt="">
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
-                                        <img src="img/instagram/6.png" alt="">
+                                        <img src="/img/instagram/6.png" alt="">
                                     </a>
                                 </div>
                             </div>
